err/oem-storage-codernitydb.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/CodernityDB'...
Compiling './lib/python3.5/site-packages/CodernityDB/database.py'...
***   File "./lib/python3.5/site-packages/CodernityDB/database.py", line 202
    exec obj in globals()
           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/CodernityDB/debug_stuff.py'...
***   File "./lib/python3.5/site-packages/CodernityDB/debug_stuff.py", line 33
    print '-----CURRENT TREE-----'
                                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/CodernityDB/multi_index.py'...
***   File "./lib/python3.5/site-packages/CodernityDB/multi_index.py", line 54
    print curr
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/CodernityDB/storage.py'...
***   File "./lib/python3.5/site-packages/CodernityDB/storage.py", line 139
    print locals()
               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/CodernityDB-0.5.0.egg-info'...
Listing './lib/python3.5/site-packages/bencode'...
Listing './lib/python3.5/site-packages/bencode.py-2.0.0.dist-info'...
Listing './lib/python3.5/site-packages/oem_framework'...
Listing './lib/python3.5/site-packages/oem_framework/core'...
Listing './lib/python3.5/site-packages/oem_framework/models'...
Listing './lib/python3.5/site-packages/oem_framework/models/core'...
Listing './lib/python3.5/site-packages/oem_framework/models/core/base'...
Listing './lib/python3.5/site-packages/oem_framework/models/core/mixins'...
Listing './lib/python3.5/site-packages/oem_framework/storage'...
Listing './lib/python3.5/site-packages/oem_framework/storage/core'...
Listing './lib/python3.5/site-packages/oem_framework-1.3.2.dist-info'...
Listing './lib/python3.5/site-packages/oem_storage_codernitydb'...
Compiling './lib/python3.5/site-packages/oem_storage_codernitydb/indices.py'...
***   File "./lib/python3.5/site-packages/oem_storage_codernitydb/indices.py", line 12
    def make_key(self, (source, target)):
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/oem_storage_codernitydb/main.py'...
***   File "./lib/python3.5/site-packages/oem_storage_codernitydb/main.py", line 119
    except Exception, ex:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/oem_storage_codernitydb-1.1.1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
